nivo-slider - fixed slides on mobile version

--- a/templates/css/style.css
+++ b/templates/css/style.css
@@ -37,7 +37,7 @@ a:focus {
 
 img {
   max-width: 100%;
-  height: auto;
+  height: 100%;
 }
 
 .fix {
